--- a/projeto_noc/pom.xml
+++ b/projeto_noc/pom.xml
@@ -79,6 +79,14 @@
       <version>1.0.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+	<dependency>
+	  <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.7</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
