--- a/projeto_noc/src/main/resources/application.properties
+++ b/projeto_noc/src/main/resources/application.properties
@@ -1,4 +1,26 @@
-#Spring Boot server configuration
+#Este é o arquivo principal de configuração do Spring Boot
+
+#Agora, vou configurar meu banco de dados:
+
+# 1-antes de tudo, baixei do repositório maven, a minha dependência do postgres  
+
+# 2-esta é uma propriedade de configuração do Spring Boot para localizar o meu banco:
+# aqui eu tenho: tipo de banco, host, porta e nome do banco.
+spring.datasource.url = jdbc:postgresql://localhost:5432/banco_projeto_noc
+
+# 3-esta é uma propriedade onde eu passo o nome do usuário do banco:
+spring.datasource.username = postgres
+
+# 4-esta é uma propriedade onde eu passo a senha do banco:
+spring.datasource.password = admin
+
+# 5-esta é uma propriedade que atualiza o banco de dados automaticamente
+spring.jpa.hibernate.ddl-auto=update
+
+#estas linhas são para resolver este erro: Método org.postgresql.jdbc.PgConnection.createClob()
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
 server.address=0.0.0.0
 server.port=8000
 
