--- a/projeto_noc/pom.xml
+++ b/projeto_noc/pom.xml
@@ -12,6 +12,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.test.skip>true</maven.test.skip> <!--pular os testes, isto me ajuda quando dou o comando: "mvn clean package"; dentro da pasta do projeto-->
   </properties>
 
   <dependencyManagement>
