--- a/projeto_noc/src/main/resources/application.properties
+++ b/projeto_noc/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
+server.servlet.context-path=/projeto_noc
+
 server.address=0.0.0.0
 server.port=8081
 
